--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -125,7 +125,6 @@ header {
     grid-column: 1 / 3;
     flex-direction: column;
     justify-content: flex-start;
-    padding-left: 4rem;
     height: 100vh;
     color: var(--text-color);
 }
@@ -140,7 +139,7 @@ header {
     justify-items: center;
     transform: translateX(-50%);
     z-index: 99999999;
-    margin-bottom: 1vh;
+    margin-bottom: 1.5vh;
     text-align: center;
 }
 
@@ -182,8 +181,14 @@ header {
         height: 18;
     }
 
+    .navbar {
+        padding: 7px 10px;
+    }
+
+
 
 }
+
 
 
 .navbar a {
@@ -203,8 +208,11 @@ header {
     .navbar {
         display: none;
     }
-}
 
+    .profilepng {
+        display: none;
+    }
+}
 
 
 @media (min-width: 1440px) {
@@ -322,6 +330,11 @@ header {
 
     }
 
+    .header__ {
+        position: sticky;
+        top: 2;
+    }
+
     .skills__container {
         display: flex;
         flex: 1 1 20rem;
@@ -342,6 +355,20 @@ header {
         display: none;
     }
 
+    .profile__inf {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .profilepng {
+        object-fit: contain;
+        border-radius: 50%;
+        width: 20%;
+        height: auto;
+        border: 1px solid var(--bar-highlight);
+    }
 
 
 }
@@ -351,8 +378,9 @@ header {
 
 
     .headerTop .header__name {
-        font-size: 2rem;
+        font-size: 1.2rem;
     }
+
 
     .headerTop .header__program {
         font-size: 1rem;
@@ -396,16 +424,18 @@ header {
         font-size: 0.7em;
         text-decoration: none;
     }
+
+
 }
 
 
 
 header .header__name {
     cursor: pointer;
-    margin: 0 0 1.1rem;
+    margin: 0 0 0.3rem;
     color: var(--wht);
     font-weight: 800;
-    font-size: 2.8rem;
+    font-size: clamp(1rem, 2rem, 3rem);
 
 }
 
@@ -657,6 +687,7 @@ main p {
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     border-radius: 20px;
     overflow: hidden;
+    border: 1px solid var(--bar-highlight);
 }
 
 .project__image {
