--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -354,9 +354,19 @@ header {
         object-fit: contain;
         border-radius: 50%;
         aspect-ratio: 1 / 1;
-        width: 20%;
+        width: 35%;
         height: auto;
-        border: 1px solid var(--bar-highlight);
+        background: conic-gradient(from 0deg,
+                #833ab4,
+                /* Purple */
+                #fd1d1d,
+                /* Red */
+                #fcb045,
+                /* Orange */
+                #833ab4
+                /* Purple */
+            );
+        padding: 10px;
     }
 
 
@@ -448,6 +458,20 @@ header {
         text-decoration: none;
     }
 
+    .profilepng {
+        background: conic-gradient(from 0deg,
+                #833ab4,
+                /* Purple */
+                #fd1d1d,
+                /* Red */
+                #fcb045,
+                /* Orange */
+                #833ab4
+                /* Purple */
+            );
+        padding: 2px;
+        width: 40%;
+    }
 
 }
 
